--- a/css/app.css
+++ b/css/app.css
@@ -1,44 +1,44 @@
 html {
     box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
+  }
+  
+  *,
+  *::before,
+  *::after {
     box-sizing: inherit;
-}
-
-html,
-body {
+  }
+  
+  html,
+  body {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
-}
-
-body {
+  }
+  
+  body {
     background: #ffffff url("../img/geometry2.png");
     /* Background pattern from Subtle Patterns */
     font-family: "Coda", cursive;
-}
-
-.container {
+  }
+  
+  .container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
-
-h1 {
+  }
+  
+  h1 {
     font-family: "Open Sans", sans-serif;
     font-weight: 300;
-}
-
-/*
- * Styles for the deck of cards
- */
-
-.deck {
+  }
+  
+  /*
+   * Styles for the deck of cards
+   */
+  
+  .deck {
     width: 660px;
     min-height: 680px;
     background: linear-gradient(160deg, #191919 0%, #2d2d2d 100%);
@@ -50,9 +50,9 @@ h1 {
     justify-content: space-between;
     align-items: center;
     margin: 0 0 3em;
-}
-
-.deck .card {
+  }
+  
+  .deck .card {
     height: 125px;
     width: 125px;
     background: #bbbbbb;
@@ -64,62 +64,113 @@ h1 {
     justify-content: center;
     align-items: center;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
-}
-
-.fa {
+  }
+  
+  .fa {
     color: black;
-}
-
-.deck .card.open {
+  }
+  
+  .deck .card.open {
     /* transform: rotateY(120deg); */
     background: #02b3e4;
     cursor: default;
-}
-
-.deck .card.show {
+  }
+  
+  .deck .card.show {
     font-size: 33px;
     pointer-events: none;
-}
-
-.deck .card.match {
+  }
+  
+  .deck .card.match {
     cursor: default;
     background: #ff7200;
     font-size: 33px;
     pointer-events: none;
-}
-
-/*
- * Styles for the Score Panel
- */
-
-.score-panel {
+  }
+  
+  /*
+   * Styles for the Score Panel
+   */
+  
+  .score-panel {
     text-align: left;
     width: 345px;
     margin-bottom: 10px;
-}
-
-.score-panel .stars {
-    margin: 0;
+  }
+  
+  .score-panel .stars {
     padding: 0;
     display: inline-block;
     margin: 0 5px 0 0;
-}
-
-.score-panel .stars li {
+  }
+  
+  .score-panel .stars li {
     list-style: none;
     display: inline-block;
-}
-
-.separator {
+  }
+  
+  .separator {
     font-weight: bold;
-}
-
-.score-panel .restart {
+  }
+  
+  .score-panel .restart {
     float: right;
     cursor: pointer;
-}
-
-.rotate {
+  }
+  
+  .rotate {
     transition: all 1000ms ease-in-out;
     transform: rotate(360deg);
-}
+  }
+  
+  /* The Modal (background) */
+  .modal {
+    /* Hidden by default */
+    display: none;
+  
+    /* Stay in place */
+    position: fixed;
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  
+    justify-content: center;
+    align-items: center;
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    text-align: center;
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    position: relative;
+  }
+  
+  /* The Close Button */
+  .close {
+    top: 0;
+    right: 20px;
+    color: #000;
+    position: absolute;
+    font-size: 48px;
+    transform: rotate(45deg);
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .show-modal {
+  }
+  
