--- a/css/app.css
+++ b/css/app.css
@@ -56,7 +56,7 @@ h1 {
   height: 125px;
   width: 125px;
   background: #bbbbbb;
-  /* font-size: 0; */
+  font-size: 0;
   color: #ffffff;
   border-radius: 8px;
   cursor: pointer;
